--- a/projetoAulaComGitHub/web/index.html
+++ b/projetoAulaComGitHub/web/index.html
@@ -6,11 +6,11 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>Página Principal</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div>TODO write content</div>
+        <div>Conteúdo que escrevi no nosso site, mas pela plataforma online do GitHub</div>
     </body>
 </html>
