--- a/projetoAulaComGitHub/web/index.html
+++ b/projetoAulaComGitHub/web/index.html
@@ -33,7 +33,7 @@ and open the template in the editor.
                         <a class="nav-link" href="#">Resumo do Curriculo <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Escolaridade</a>
+                        <a class="nav-link" href="escolaridade.html">Escolaridade</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
